fixed up sass spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -11,9 +11,8 @@ $body-color: #fff
 $background-color: #111;
 $black: #111
 
-html {
+html
   white-space: pre-wrap;
-}
 
 .footer
   border-top: 1px solid white;
